# LibreLog

./: README.md  pyproject.toml
libre_log/: __init__.py  evaluator.py  grouping.py  parser.py
parser/: evaluator.py  grouping.py  llama_parser.py  regex_manager.py
